rpi5/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  serviceName: sonarr
  template:
    metadata:
      name: sonarr
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 8989
              path: /ping
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8989
              path: /ping
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /data
            server: 192.168.1.52
            readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
